# text-editor

./: CMakeLists.txt  InstrumentPanel.cpp  InstrumentPanel.h  MainApp.cpp  MainFrame.cpp  MainFrame.h  README.md
src/: InstrumentPanel.cpp  InstrumentPanel.h  MainApp.cpp  MainApp.h
